--- a/HzrFilter/HzrFilter.vcxproj
+++ b/HzrFilter/HzrFilter.vcxproj
@@ -52,12 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Behavior.c" />
+    <ClCompile Include="Communication.c" />
     <ClCompile Include="Protect.c" />
-    <ClCompile Include="Service.c" />
     <ClCompile Include="Utility.c" />
     <ResourceCompile Include="HzrFilter.rc" />
     <ClCompile Include="Context.c" />
-    <ClCompile Include="Handle.c" />
     <ClCompile Include="HzrFilter.c" />
     <Inf Include="HzrFilter.inf" />
   </ItemGroup>
@@ -278,11 +277,9 @@
   <ItemGroup>
     <ClInclude Include="Context.h" />
     <ClInclude Include="Behavior.h" />
-    <ClInclude Include="Handle.h" />
     <ClInclude Include="HzrFilter.h" />
     <ClInclude Include="Protect.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Service.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
