--- a/HsCore/HsCore/HsCore.vcxproj.filters
+++ b/HsCore/HsCore/HsCore.vcxproj.filters
@@ -11,6 +11,9 @@
     <Filter Include="Scanner">
       <UniqueIdentifier>{82e5a463-da7e-46ad-99ef-bf3f7e0f8d7a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ClamAV">
+      <UniqueIdentifier>{4c5db6c7-cdae-4cbd-811f-ba868cf4159e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ntfs.h">
@@ -19,6 +22,12 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scanner.h">
       <Filter>Scanner</Filter>
+    </ClInclude>
+    <ClInclude Include="clamav.h">
+      <Filter>ClamAV</Filter>
+    </ClInclude>
+    <ClInclude Include="ossl_typ.h">
+      <Filter>ClamAV</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
