[HsService] Add version resource file

--- a/HsCore/HsService/HsService.vcxproj.filters
+++ b/HsCore/HsService/HsService.vcxproj.filters
@@ -22,5 +22,11 @@
     <ClInclude Include="KhspUser.h">
       <Filter>Driver</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HsService.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
