--- a/HsCore/HsService/HsService.vcxproj
+++ b/HsCore/HsService/HsService.vcxproj
@@ -172,6 +172,10 @@
   <ItemGroup>
     <ClInclude Include="KhspUser.h" />
     <ClInclude Include="KhsUser.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HsService.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
