--- a/HsCore/HsService/HsService.vcxproj
+++ b/HsCore/HsService/HsService.vcxproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="KhsUser.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="Service.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HsCore\HsCore.vcxproj">
@@ -173,6 +174,7 @@
     <ClInclude Include="KhspUser.h" />
     <ClInclude Include="KhsUser.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Service.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HsService.rc" />
