--- a/HsCore/HsService/HsService.vcxproj
+++ b/HsCore/HsService/HsService.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="KhsUser.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="Service.c" />
+    <ClCompile Include="Utility.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HsCore\HsCore.vcxproj">
@@ -175,6 +176,7 @@
     <ClInclude Include="KhsUser.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Service.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HsService.rc" />
