--- a/HsCore/phlib/phlib.vcxproj
+++ b/HsCore/phlib/phlib.vcxproj
@@ -138,9 +138,9 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="apiimport.c" />
     <ClCompile Include="basesup.c" />
     <ClCompile Include="basesupa.c" />
-    <ClCompile Include="basesupx.c" />
     <ClCompile Include="circbuf.c" />
     <ClCompile Include="collect.c" />
     <ClCompile Include="colorbox.c" />
@@ -168,7 +168,6 @@
     <ClCompile Include="maplib.c" />
     <ClCompile Include="md5.c" />
     <ClCompile Include="native.c" />
-    <ClCompile Include="ntimport.c" />
     <ClCompile Include="provider.c" />
     <ClCompile Include="queuedlock.c" />
     <ClCompile Include="ref.c" />
@@ -184,6 +183,7 @@
     <ClCompile Include="workqueue.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\apiimport.h" />
     <ClInclude Include="include\cpysave.h" />
     <ClInclude Include="include\filepool.h" />
     <ClInclude Include="include\filepoolp.h" />
@@ -192,15 +192,15 @@
     <ClInclude Include="include\ntzwapi.h" />
     <ClInclude Include="include\phintrnl.h" />
     <ClInclude Include="include\phnatinl.h" />
-    <ClInclude Include="include\phsync.h" />
     <ClInclude Include="include\circbuf.h" />
     <ClInclude Include="include\circbuf_h.h" />
     <ClInclude Include="circbuf_i.h" />
     <ClInclude Include="include\colorbox.h" />
+    <ClInclude Include="include\secedit.h" />
+    <ClInclude Include="include\symprvp.h" />
     <ClInclude Include="include\treenew.h" />
     <ClInclude Include="include\treenewp.h" />
     <ClInclude Include="include\verify.h" />
-    <ClInclude Include="pcre\config.h" />
     <ClInclude Include="include\dltmgr.h" />
     <ClInclude Include="include\dspick.h" />
     <ClInclude Include="include\emenu.h" />
@@ -219,7 +219,6 @@
     <ClInclude Include="include\ntdbg.h" />
     <ClInclude Include="include\ntexapi.h" />
     <ClInclude Include="include\ntgdi.h" />
-    <ClInclude Include="include\ntimport.h" />
     <ClInclude Include="include\ntioapi.h" />
     <ClInclude Include="include\ntkeapi.h" />
     <ClInclude Include="include\ntldr.h" />
@@ -256,7 +255,6 @@
     <ClInclude Include="include\sha.h" />
     <ClInclude Include="include\symprv.h" />
     <ClInclude Include="include\templ.h" />
-    <ClInclude Include="pcre\ucp.h" />
     <ClInclude Include="include\verifyp.h" />
     <ClInclude Include="include\winsta.h" />
   </ItemGroup>
